# router-migrate

./: README.md  arista-migrate.py  pyproject.toml  setup.py
router_migrate/: cli.py  models.py
router_migrate/analyzers/: fidelity.py  migrator.py
router_migrate/generators/: arista.py  base.py  brocade.py  cisco.py  huawei.py  juniper.py  mlx.py  panos.py
router_migrate/parsers/: arista.py  base.py  brocade.py  cisco.py  huawei.py  juniper.py  mlx.py  panos.py
router_migrate/web/: app.py
test_configs/: out_arista_to_arista.cfg  out_arista_to_brocade.cfg  out_arista_to_cisco.cfg  out_arista_to_huawei.cfg  out_arista_to_juniper.cfg  out_arista_to_mlx.cfg  out_brocade_to_arista.cfg  out_brocade_to_brocade.cfg  out_brocade_to_cisco.cfg  out_brocade_to_huawei.cfg  out_brocade_to_juniper.cfg  out_brocade_to_mlx.cfg  out_cisco_to_arista.cfg  out_cisco_to_brocade.cfg  out_cisco_to_cisco.cfg  out_cisco_to_huawei.cfg  out_cisco_to_juniper.cfg  out_cisco_to_mlx.cfg  out_huawei_to_arista.cfg  out_huawei_to_brocade.cfg  out_huawei_to_cisco.cfg  out_huawei_to_huawei.cfg  out_huawei_to_juniper.cfg  out_huawei_to_mlx.cfg  out_juniper_to_arista.cfg  out_juniper_to_brocade.cfg  out_juniper_to_cisco.cfg  out_juniper_to_huawei.cfg  out_juniper_to_juniper.cfg  out_juniper_to_mlx.cfg  out_mlx_to_arista.cfg  out_mlx_to_brocade.cfg  out_mlx_to_cisco.cfg  out_mlx_to_huawei.cfg  out_mlx_to_juniper.cfg  out_mlx_to_mlx.cfg  source_arista.cfg  source_brocade.cfg  source_cisco.cfg  source_huawei.cfg  (+6 more)
tests/: run_tests.py  test_generators.py  test_migrator.py  test_parsers.py
(+3 files in other folders)
