[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "router-migrate"
version = "0.1.0"
description = "Universal Router Configuration Migration Tool"
authors = [
    { name = "Oliver" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "questionary",
    "rich",
    "pytest"
]

[tool.setuptools.packages.find]
include = ["router_migrate*"]

[project.scripts]
router-migrate = "router_migrate.cli:main"
